# Process-Simulator

./: .gitattributes  .gitignore  CMakeLists.txt  PURE_PYTHON_SUMMARY.md  README.md  RL_PROCESS_OPTIMIZER_README.md  process_sim_architecture.md  pyproject.toml  requirements.txt  rl_process_optimizer.md  temp_gui_repro.cpp
.claude/: settings.local.json
.github/workflows/: ci.yml
.venv-mac-test/: pyvenv.cfg
analysis/: reward_landscape.py
analysis_output/: grid_scan_results.json
build-macos-arm/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  run_tests
build-macos-arm/Testing/Temporary/: CTestCostData.txt
build-macos-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
build-macos-arm64-explicit/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
build-macos-armfix/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
build-macos-core/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-macos-verify/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  run_tests
build-macos-verify/Testing/Temporary/: CTestCostData.txt
build-mingw64/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-mingw64/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
chemsim/: __init__.py  core.py
chemsim/flowsheet/: __init__.py  flowsheet.py  graph.py  recycle.py
chemsim/io/: __init__.py  component_db.py  parser.py
chemsim/ops/: __init__.py  base.py  compressor.py  distillation.py  flash_drum.py  heat_exchanger.py  mixer.py  pump.py  reactor.py  splitter.py
chemsim/thermo/: __init__.py  flash.py  peng_robinson.py
chemsim_gym/: __init__.py  env.py  reward.py  simulator_bridge.py  spaces.py  wrappers.py
data/: components.json  components_handbook_candidates.json  handbook_property_library.json
examples/: distillation_recycle.json  quickstart.ipynb  simple_recycle.json
include/chemsim/core/: Component.hpp  Mixture.hpp  Stream.hpp
include/chemsim/flowsheet/: DistillationColumnOp.hpp  FlashDrumOp.hpp  Flowsheet.hpp  FlowsheetGraph.hpp  IUnitOp.hpp  MixerOp.hpp  PumpOp.hpp  RecycleSolver.hpp  SplitterOp.hpp
include/chemsim/io/: ComponentDB.hpp  FlowsheetParser.hpp
include/chemsim/numerics/: BrentSolver.hpp
include/chemsim/ops/: Compressor.hpp  DistillationColumn.hpp  FlashDrum.hpp  HeatExchanger.hpp  Pump.hpp  Reactor.hpp
include/chemsim/thermo/: EOS.hpp  FlashCalculator.hpp  PengRobinson.hpp
notebooks/: 01_environment_sanity.ipynb
python/: chemsim.cpp
python/chemsim/: __init__.py
src/flowsheet/: Flowsheet.cpp  FlowsheetGraph.cpp  RecycleSolver.cpp
src/gui/: FlowsheetCanvas.cpp  FlowsheetCanvas.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
src/io/: FlowsheetParser.cpp
src/ops/: Compressor.cpp  DistillationColumn.cpp  FlashDrum.cpp  HeatExchanger.cpp  Pump.cpp  Reactor.cpp
src/thermo/: FlashCalculator.cpp  PengRobinson.cpp
tests/: conftest.py  test_phase1.cpp  test_phase1.py  test_phase2.cpp  test_phase2.py  test_phase3.cpp  test_phase3.py  test_phase5.cpp  test_phase5.py
tools/: extract_handbook_properties.py
training/: evaluate.py  train.py
training/config/: default.yaml
