[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemsim"
version = "0.2.0"
description = "Steady-state process simulator — pure Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scipy>=1.12",
  "seaborn>=0.13",
  "stable-baselines3>=2.3",
  "tensorboard>=2.16",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["chemsim", "chemsim_gym"]
